delete and mofidie  reservation